src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__numeric_suffix.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                where_clause: None,
                body: Some(
                    Block {
                        statements: [
                            Let {
                                pattern: Pattern {
                                    kind: Ident {
                                        by_ref: false,
                                        mutable: false,
                                        name: Spanned {
                                            node: SymbolU32 {
                                                value: 2,
                                            },
                                            span: Span {
                                                start: 13,
                                                end: 14,
                                                start_line: 1,
                                                start_col: 14,
                                            },
                                        },
                                        subpattern: None,
                                    },
                                    span: Span {
                                        start: 13,
                                        end: 14,
                                        start_line: 1,
                                        start_col: 14,
                                    },
                                },
                                ty: None,
                                value: Some(
                                    Expr {
                                        kind: Literal(
                                            Literal {
                                                kind: Int {
                                                    value: 42,
                                                    suffix: Some(
                                                        U32,
                                                    ),
                                                },
                                                span: Span {
                                                    start: 17,
                                                    end: 22,
                                                    start_line: 1,
                                                    start_col: 18,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 17,
                                            end: 22,
                                            start_line: 1,
                                            start_col: 18,
                                        },
                                    },
                                ),
                                span: Span {
                                    start: 9,
                                    end: 23,
                                    start_line: 1,
                                    start_col: 10,
                                },
                            },
                            Let {
                                pattern: Pattern {
                                    kind: Ident {
                                        by_ref: false,
                                        mutable: false,
                                        name: Spanned {
                                            node: SymbolU32 {
                                                value: 3,
                                            },
                                            span: Span {
                                                start: 28,
                                                end: 29,
                                                start_line: 1,
                                                start_col: 29,
                                            },
                                        },
                                        subpattern: None,
                                    },
                                    span: Span {
                                        start: 28,
                                        end: 29,
                                        start_line: 1,
                                        start_col: 29,
                                    },
                                },
                                ty: None,
                                value: Some(
                                    Expr {
                                        kind: Literal(
                                            Literal {
                                                kind: Float {
                                                    value: OrderedFloat(
                                                        3.14,
                                                    ),
                                                    suffix: Some(
                                                        F64,
                                                    ),
                                                },
                                                span: Span {
                                                    start: 32,
                                                    end: 39,
                                                    start_line: 1,
                                                    start_col: 33,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 32,
                                            end: 39,
                                            start_line: 1,
                                            start_col: 33,
                                        },
                                    },
                                ),
                                span: Span {
                                    start: 24,
                                    end: 40,
                                    start_line: 1,
                                    start_col: 25,
                                },
                            },
                            Let {
                                pattern: Pattern {
                                    kind: Ident {
                                        by_ref: false,
                                        mutable: false,
                                        name: Spanned {
                                            node: SymbolU32 {
                                                value: 4,
                                            },
                                            span: Span {
                                                start: 45,
                                                end: 46,
                                                start_line: 1,
                                                start_col: 46,
                                            },
                                        },
                                        subpattern: None,
                                    },
                                    span: Span {
                                        start: 45,
                                        end: 46,
                                        start_line: 1,
                                        start_col: 46,
                                    },
                                },
                                ty: None,
                                value: Some(
                                    Expr {
                                        kind: Literal(
                                            Literal {
                                                kind: Int {
                                                    value: 100,
                                                    suffix: Some(
                                                        I8,
                                                    ),
                                                },
                                                span: Span {
                                                    start: 49,
                                                    end: 54,
                                                    start_line: 1,
                                                    start_col: 50,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 49,
                                            end: 54,
                                            start_line: 1,
                                            start_col: 50,
                                        },
                                    },
                                ),
                                span: Span {
                                    start: 41,
                                    end: 55,
                                    start_line: 1,
                                    start_col: 42,
                                },
                            },
                        ],
                        expr: None,
                        span: Span {
                            start: 7,
                            end: 57,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 57,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 57,
        start_line: 1,
        start_col: 1,
    },
}
