src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__or_pattern.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Match {
                                    scrutinee: Expr {
                                        kind: Path(
                                            ExprPath {
                                                segments: [
                                                    ExprPathSegment {
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 2,
                                                            },
                                                            span: Span {
                                                                start: 15,
                                                                end: 16,
                                                                start_line: 1,
                                                                start_col: 16,
                                                            },
                                                        },
                                                        args: None,
                                                    },
                                                ],
                                                span: Span {
                                                    start: 15,
                                                    end: 16,
                                                    start_line: 1,
                                                    start_col: 16,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 15,
                                            end: 16,
                                            start_line: 1,
                                            start_col: 16,
                                        },
                                    },
                                    arms: [
                                        MatchArm {
                                            pattern: Pattern {
                                                kind: Or(
                                                    [
                                                        Pattern {
                                                            kind: Literal(
                                                                Literal {
                                                                    kind: Int {
                                                                        value: 1,
                                                                        suffix: None,
                                                                    },
                                                                    span: Span {
                                                                        start: 19,
                                                                        end: 20,
                                                                        start_line: 1,
                                                                        start_col: 20,
                                                                    },
                                                                },
                                                            ),
                                                            span: Span {
                                                                start: 19,
                                                                end: 20,
                                                                start_line: 1,
                                                                start_col: 20,
                                                            },
                                                        },
                                                        Pattern {
                                                            kind: Literal(
                                                                Literal {
                                                                    kind: Int {
                                                                        value: 2,
                                                                        suffix: None,
                                                                    },
                                                                    span: Span {
                                                                        start: 23,
                                                                        end: 24,
                                                                        start_line: 1,
                                                                        start_col: 24,
                                                                    },
                                                                },
                                                            ),
                                                            span: Span {
                                                                start: 23,
                                                                end: 24,
                                                                start_line: 1,
                                                                start_col: 24,
                                                            },
                                                        },
                                                        Pattern {
                                                            kind: Literal(
                                                                Literal {
                                                                    kind: Int {
                                                                        value: 3,
                                                                        suffix: None,
                                                                    },
                                                                    span: Span {
                                                                        start: 27,
                                                                        end: 28,
                                                                        start_line: 1,
                                                                        start_col: 28,
                                                                    },
                                                                },
                                                            ),
                                                            span: Span {
                                                                start: 27,
                                                                end: 28,
                                                                start_line: 1,
                                                                start_col: 28,
                                                            },
                                                        },
                                                    ],
                                                ),
                                                span: Span {
                                                    start: 19,
                                                    end: 28,
                                                    start_line: 1,
                                                    start_col: 20,
                                                },
                                            },
                                            guard: None,
                                            body: Expr {
                                                kind: Literal(
                                                    Literal {
                                                        kind: Bool(
                                                            true,
                                                        ),
                                                        span: Span {
                                                            start: 32,
                                                            end: 36,
                                                            start_line: 1,
                                                            start_col: 33,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 32,
                                                    end: 36,
                                                    start_line: 1,
                                                    start_col: 33,
                                                },
                                            },
                                            span: Span {
                                                start: 19,
                                                end: 36,
                                                start_line: 1,
                                                start_col: 20,
                                            },
                                        },
                                        MatchArm {
                                            pattern: Pattern {
                                                kind: Wildcard,
                                                span: Span {
                                                    start: 38,
                                                    end: 39,
                                                    start_line: 1,
                                                    start_col: 39,
                                                },
                                            },
                                            guard: None,
                                            body: Expr {
                                                kind: Literal(
                                                    Literal {
                                                        kind: Bool(
                                                            false,
                                                        ),
                                                        span: Span {
                                                            start: 43,
                                                            end: 48,
                                                            start_line: 1,
                                                            start_col: 44,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 43,
                                                    end: 48,
                                                    start_line: 1,
                                                    start_col: 44,
                                                },
                                            },
                                            span: Span {
                                                start: 38,
                                                end: 48,
                                                start_line: 1,
                                                start_col: 39,
                                            },
                                        },
                                    ],
                                },
                                span: Span {
                                    start: 9,
                                    end: 50,
                                    start_line: 1,
                                    start_col: 10,
                                },
                            },
                        ),
                        span: Span {
                            start: 7,
                            end: 52,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 52,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 52,
        start_line: 1,
        start_col: 1,
    },
}
